@@ -1,13 +1,14 @@
 """ Proactive layer 2 Openflow Controller """
 
+import configparser
 import logging
 import json
 import os
 import sys
-from urllib.request import FileHandler
 
-from cerberus import config_parser
+from cerberus.config_parser import Validator, Parser
 from cerberus.exceptions import *
+from pbr.version import VersionInfo
 from ryu.base import app_manager
 from ryu.controller import ofp_event, dpset
 from ryu.controller.handler import MAIN_DISPATCHER, set_ev_cls
@@ -39,14 +40,23 @@ class cerberus(app_manager.RyuApp):
 
         self.dpset = _kwargs['dpset']
         self.logname = 'cerberus'
-        # self.logger = self.setup_logger()
+        self.logger = self.setup_logger()
+        self.logger.info(f"Starting Cerberus {VersionInfo('cerberus')}")
         self.config = self.get_config_file()
 
     def get_config_file(self, config_file=DEFAULT_CONFIG):
         """ Reads config file from file and checks it's validity """
+        # TODO: Get config file from env if set
         config = self.open_config_file(config_file)
-        if not config_parser.check_config(config, self.logname):
+        if not Validator().check_config(config, self.logname):
             sys.exit()
+        links, p4_switches, switches, group_links = Parser(self.logname).parse_config(config)
+        
+    @set_ev_cls(dpset.EventDP, dpset.DPSET_EV_DISPATCHER)
+    def datapath_connection_handler(self, ev):
+        """ Handles connecting to switches """
+        if ev.enter:
+            self.logger.info(f'Datapath: {ev.dp.id}\t found')
 
     def open_config_file(self, config_file):
         """ Reads the config """
@@ -73,7 +83,7 @@ class cerberus(app_manager.RyuApp):
         """ Setup and return the logger """
         
         logger = logging.getLogger(self.logname)
-        log_handler = logging.FileHandler(logfile)
+        log_handler = logging.FileHandler(logfile, mode='a+')
         log_handler.setFormatter( 
             logging.Formatter('%(asctime)s %(name)s %(levelname)s %(message)s', 
                               '%b %d %H:%M:%S'))
